fix: suite fix sonarlint